--- a/upload image full project.css
+++ b/upload image full project.css
@@ -1,7 +1,13 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
-
+.imageDivStyle {
+    width: 600px;
+    border: 1px gray solid;
+    padding: 5px;
+    margin-left: 120px;
+    margin-bottom: 20px;
+}
 #productsDiv{
     display: flex;
     flex-wrap: wrap;
@@ -13,7 +19,7 @@ body {
     padding: 5px;
 }
 
-.imgs {
+.img {
     height:  80px;
     width: 100px;
     border: 1px black dashed;
@@ -71,6 +77,7 @@ textarea {
     justify-content: space-between;
     flex-direction: column;
     transition: border-color .3s ;
+    padding: 10px;
 }
 
 .productCard:hover {
@@ -86,6 +93,9 @@ textarea {
 
 .detbtn {
     color: whitesmoke;
+    background-color: navy;
+    width: 90%;
+    margin-bottom: 15px;
 }
 
 .title {
@@ -114,10 +124,18 @@ textarea {
     max-height: 400px;
 }
 
-.smimgs{
+.smimg{
     height: 80px;
     width: 100px;
     border: 1px gray solid;
+}
+
+#smImgDiv {
+    display: flex;
+    width: 550px;
+    margin-top: 10px;
+    flex-wrap: wrap;
+    margin-left: 6px;
 }
 
 .breadcrumb {
@@ -142,5 +160,10 @@ textarea {
     width: 300px;
 }
 #title, #description{
+    word-wrap: break-word;
+}
+
+.points {
+    align-self: flex-start;
     word-wrap: break-word;
 }
